--- a/BootstrapSpacing.html
+++ b/BootstrapSpacing.html
@@ -11,7 +11,7 @@
  </head>
   <body>
         <div class="container">
-            <h1 class="text-success text-center bg-danger mt-5 pb-2">BootstrapSpacing</h1> <br>
+            <h1 class="text-success text-center bg-danger mt-5 pb-2">BootStrapSpacing</h1> <br>
             <h4 class="text-white bg-warning d-inline px-4">With My Routine</h4>
             <div>
                 <p class="display-7 text-info">
@@ -41,7 +41,7 @@
                     <br>
                     <div class="row">
                         <h4 class="col-4 text-info text-center">7 am </h4>
-                        <h4 class="col-4 text-warning">Typing Practice</h4>
+                        <h4 class="col-4 text-warning text-center">Typing Practice</h4>
                         <h4 class="col-4 text-primary text-center"> 30 Minute</h4>
                     </div>
                 <div class="row">
