Toolbar & vartical btn add

--- a/NewBootstrapPractice/GroupButton.html
+++ b/NewBootstrapPractice/GroupButton.html
@@ -63,6 +63,55 @@
                         </ul>
                         
                       </div>
+                         <br> <br>
+                      <div>
+                        <h2 class="text-center text-info bg-dark pb-1">Splite Dropdown Button</h2>
+                        <br>
+
+                        <button class="btn btn-primary dropdown-toggle dropdown-toggle-split" type="button" data-bs-toggle="dropdown"> <span class="sr-only">Splite button</span></button>
+
+                            <!--Splite button kaj korse na pore thik korte hobe getBootstrap5 a nai but bt 4 a kaj kore 
+                            but ekn bt 5 cholse-->
+
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Link One</a></li>
+                          <li><a class="dropdown-item" href="#">Link Ttwo</a></li>
+                          <li><a class="dropdown-item" href="#">Link Three</a></li>
+                          <div class="dropdown-divider"></div>
+                          <li><a class="dropdown-item" href="#">Link four With divider
+                          </a></li>
+                        </ul>
+                      </div>
+
+                      <br> <br>
+
+                      <h2 class="text-center text-info bg-dark">Toolbar & Vartical Button</h2>
+
+                      <br> 
+                      <div class="btn-toolbar" role="toolbar">
+                        
+                          <div class="mr-2 btn-group">
+                              <button type="button" class="btn btn-info">1</button>
+                              <button type="button" class="btn btn-dark">2</button>
+                              <button type="button" class="btn btn-secondary">3</button>
+                              <button type="button" class="btn btn-danger">4</button>
+                          </div>
+                            <div class="mr-2 btn-group">
+                              <button class="btn btn-info">5</button>
+                              <button class="btn btn-dark">6</button>
+                              <button class="mr-2 btn btn-danger">7</button>
+                            </div>
+                            <div class="mr-2 btn-group">
+                              <button class="btn btn-success">8</button>
+                            </div>
+                      </div>
+
+                      <br> <br>
+                      <div class="btn-group-vertical">
+                          <button class="btn bg-info mb-2" type="button">Left</button>
+                          <button class="btn bg-dark text-light mb-2" type="button">Middle</button>
+                          <button class="btn bg-info" type="button">Right</button>
+                      </div>
                 </div>
 
 
