--- a/Nav-Navber.html
+++ b/Nav-Navber.html
@@ -84,6 +84,57 @@
               </nav>
 
 
+              <br> <br> <br>
+            <!--Navbar with search box-->
+
+        <nav class="navbar-expand-md navbar bg-info navbar-info">    
+              <div class="container">
+
+                    <a class="navbar-brand" href="#">Navbar</a>
+
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">Other Memu</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="#">Link1</a>
+                                    <a class="dropdown-item" href="#">Link2</a>
+                                </div>
+                            </li>
+                        </ul>
+                        <form class="d-flex mr-auto">
+                            <input class="form-control" placeholder="Search" type="Search">
+                            <button type="submit" class="btn btn-dark">Search</button>
+                        </form>
+            </div>
+        </nav>
+            <br> <br>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Link 1</a>
+                </li>
+                <li>
+                    <a href="#">Link 2</a>
+                </li>
+                <li>
+                    <a href="#">Link 3</a>
+                </li>
+            </ul>
+        </nav>
+
+
         <!--Script-->
         <script src="js/bootstrap.bundle.min.js">
         </script>
