--- a/List-Groups&Badges.html
+++ b/List-Groups&Badges.html
@@ -5,8 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List-Groups&Badges</title>
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="text-info text-center bg-dark pb-1 mt-4">List-Groups</h1>
+        <br>
+        <ul class="list-group">
+            <li class="list-group-item">My list Item 1</li>
+            <li class="list-group-item">My list Item 2</li>
+            <li class="list-group-item">My list Item 3</li>
+            <li class="list-group-item">My list Item 4</li>
+            <li class="list-group-item">My list Item 5</li>
+        </ul>
+        <br> <br>
+
+        <ul class="list-group">
+            <a class="list-group-item list-group-item-action" href="#">My list Item 1</a>
+            <a class="list-group-item list-group-item-action" href="#">My List Item 2</a>
+            <a class="list-group-item list-group-item-action" href="#">My List Item 3</a>
+            <a class="list-group-item list-group-item-action" href="#">My List Item 4</a>
+            <a class="list-group-item list-group-item-action" href="#">My List Item 5</a>
+        </ul>
+        <br> <br>
+
+        <h2 class="text-info text-center ">Contextual Classes</h2>
+        <br> <br>
+        <ul>
+            <li class="list-group-item list-group-item-action list-group-item-primary">My List Item 1</li>
+            <li class="list-group-item list-group-item-action list-group-item-danger">My List Item 2</li>
+            <li class="list-group-item list-group-item-action list-group-item-warning">My List Item 3</li>
+            <li class="list-group-item list-group-item-action list-group-item-dark">My List Item 4</li>
+            <li class="list-group-item list-group-item-action list-group-item-info">My List Item 5</li>
+        </ul>
+        <br> <br>
+
+        <h2 class="text-info text-center">List Group With Badges</h2>
+
+        <ul class="list-group">
+            <li class="list-group-item">My list Item 1</li>
+            <li class="list-group-item">My list Item 2 <span class="badge bg-info">33</span></li>
+            <li class="list-group-item">My list Item 3 <span class="badge bg-primary">22</span></li>
+            <li class="list-group-item">My list Item 4</li>
+            <li class="list-group-item">My list Item 5</li>
+        </ul>
+        <br> <br>
+
+        <h2 class="text-info text-center">Custom Content</h2>
+        <div class="list-group">
+            <a href="#">
+                <div>
+                    <h5>My Post One</h5>
+                    <small>3 days ago</small>
+                </div>
+                <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias repudiandae odio officiis, debitis molestiae accusamus necessitatibus nobis! Autem eligendi, maiores nihil quos, explicabo tempora excepturi natus accusamus itaque, perferendis corporis eum quaerat similique unde voluptates soluta quisquam architecto dicta alias!</p>
+                <small class="text-danger">By JR</small>
+            </a>
+        </div>
+
+    </div>
+
+    <!--Script-->
+        <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
