--- a/013-FormAnd-Input.html
+++ b/013-FormAnd-Input.html
@@ -46,17 +46,17 @@
                 <legend>Chose Your Option</legend>
                 <div class="form-group">
                     <label class="form-check-label">
-                        <input class="form-check-input" type="radio" value="option1" checked>Personal
+                        <input class="form-check-input" type="radio" name="parson" value="option1" checked>Personal
                     </label>
                 </div>
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input class="form-check-input" type="radio" value="option2" >Commercial Use
+                        <input class="form-check-input" type="radio" name="parson" value="option2" >Commercial Use
                     </label>
                 </div>
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input class="form-check-input " type="radio" value="option3" disabled>Testing
+                        <input class="form-check-input " type="radio" name="" value="option3" disabled>Testing
                     </label>
                 </div>
             </fieldset>
@@ -67,7 +67,7 @@
                     Sigh up for newsletter
                 </label>
             </div>
-            <button class="btn btn-warning" type="submit">
+            <button class="btn btn-warning mt-3" type="submit">
                 Submit
             </button>
 
