--- a/013-FormAnd-Input.html
+++ b/013-FormAnd-Input.html
@@ -72,7 +72,18 @@
             </button>
 
         </form>
+        <br> <br>
 
+        <form class="form-inline">
+            <input class="form-control" type="text" id="username" placeholder="Enter a Name">
+            <input class="form-control" type="text" id="password" placeholder="password">
+                <div class="form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" name="" id="remember">Remember me
+                    </label>
+                </div>
+            <button class="btn btn-dark" type="submit">Submit</button>
+        </form>
 
     </div>
 
