--- a/013-FormAnd-Input.html
+++ b/013-FormAnd-Input.html
@@ -83,6 +83,13 @@
                     </label>
                 </div>
             <button class="btn btn-dark" type="submit">Submit</button>
+
+            <div class="form">
+                <label for="password"></label>
+                <input class="form-control is-valid" type="text" id="password"></input>
+                <div class="invalid-feedback">That passsword is not safe</div>
+                <small>Please input a strong password</small>
+            </div>
         </form>
 
     </div>
