--- a/017-CardAdd-&-Design.html
+++ b/017-CardAdd-&-Design.html
@@ -50,8 +50,249 @@
                 <h6 class="text-muted card-footer">1 Hr. Latter</h6>
             </div>
         </div>
+        <br><br>
 
 
+            <!-- ====== kaj korsena =======
+
+            <div class="card-header">
+                <ul class="nav nab-tabs card-header-tabs">
+                    <li class="nav-item"><a class="nav-link active" href="#">Active</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="#">Link</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="#">Disabled</a></li>
+                </ul>
+            </div>
+            ================================= -->
+        <div class="card">
+            <div class="card-header">
+
+        <!--====== এইখানে যদি ul Class এ nav-pills card-header-pills add করি তাহলে একটু ভিন্য    হবে================-->
+
+                <ul class="nav nav-tabs card-header-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Active</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card-body">
+                <h4 class="text-danger">Wonderfull Cat</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, ea.</p>
+                <a class="btn btn-success" href="#">Read More</a>
+            </div>
+        </div>
+        <br><br>
+
+        <div class="card">
+            <img class="card-img" src="image/cat-1.png" alt="My-Cat">
+            <div class="card-img-overlay text-light">
+                <h4>My Cute Pate</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas impedit fuga quidem totam voluptatum a!
+                    Lorem ipsum, dolor sit amet
+                    consectetur adipisicing 
+                    elit. Quas impedit fuga 
+                    quidem totam voluptatum a!
+                    <br> <br> <br> <br><br><br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, aperiam corrupti ipsum voluptate unde soluta cupiditate in aliquid quod fuga at dolorum et distinctio sit repudiandae officia commodi neque enim!
+                </p>
+                <small>Last Updated 3 min. ago</small>
+            </div>
+        </div>
+        <br><br><br>
+
+        <div class="card border-primary">
+            <div class="card-body">
+                <h4 class="card-title text-primary">Cat Lost</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eligendi ipsam optio cum est cupiditate quia quo labore, sit totam.</p>
+            </div>
+        </div>
+        <br>
+
+        <div class="card border-secondary">
+            <div class="card-body">
+                <h4 class="card-title 
+        text-secondary">Cat Lost</h4>
+                <p class="card-text">Lorem ipsum
+        dolor sit amet consectetur 
+        adipisicing elit. Maxime 
+        eligendi ipsam optio cum est 
+        cupiditate quia quo labore, sit 
+        totam.</p>
+            </div>
+        </div>
+        <br>
+
+        <div class="card border-success">
+            <div class="card-body">
+                <h4 class="card-title 
+        text-success">Cat Lost</h4>
+                <p class="card-text">Lorem ipsum
+        dolor sit amet consectetur 
+        adipisicing elit. Maxime 
+        eligendi ipsam optio cum est 
+        cupiditate quia quo labore, sit 
+        totam.</p>
+            </div>
+        </div>
+        <br>
+
+        <div class="card border-danger">
+            <div class="card-body">
+                <h4 class="card-title 
+        text-danger">Cat Lost</h4>
+                <p class="card-text">Lorem ipsum
+        dolor sit amet consectetur 
+        adipisicing elit. Maxime 
+        eligendi ipsam optio cum est 
+        cupiditate quia quo labore, sit 
+        totam.</p>
+            </div>
+        </div>
+        <br>
+
+        <div class="card border-warning">
+            <div class="card-body">
+                <h4 class="card-title 
+        text-warning">Cat Lost</h4>
+                <p class="card-text">Lorem ipsum
+        dolor sit amet consectetur 
+        adipisicing elit. Maxime 
+        eligendi ipsam optio cum est 
+        cupiditate quia quo labore, sit 
+        totam.</p>
+            </div>
+        </div>
+        <br>
+
+        <div class="card border-info">
+            <div class="card-body">
+                <h4 class="card-title 
+        text-info">Cat Lost</h4>
+                <p class="card-text">Lorem ipsum
+        dolor sit amet consectetur 
+        adipisicing elit. Maxime 
+        eligendi ipsam optio cum est 
+        cupiditate quia quo labore, sit 
+        totam.</p>
+            </div>
+        </div> <br>
+
+        <div class="card border-lime">
+            <div class="card-body">
+                <h4 class="card-title 
+        text-danger">Cat Lost</h4>
+                <p class="card-text">Lorem ipsum
+        dolor sit amet consectetur 
+        adipisicing elit. Maxime 
+        eligendi ipsam optio cum est 
+        cupiditate quia quo labore, sit 
+        totam.</p>
+            </div>
+        </div> <br>
+
+        <div class="card border-dark">
+            <div class="card-body">
+                <h4 class="card-title 
+        text-dark">Cat Lost</h4>
+                <p class="card-text">Lorem ipsum
+        dolor sit amet consectetur 
+        adipisicing elit. Maxime 
+        eligendi ipsam optio cum est 
+        cupiditate quia quo labore, sit 
+        totam.</p>
+            </div>
+        </div> <br> <br><br>
+
+        <h4 class="text-info">Card Group</h4>
+
+        <div class="card-group">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">My Cats</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet explicabo ipsam, recusandae sunt fuga ad neque consectetur quae blanditiis?</p>
+                </div>
+            </div>
+            <br>
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">My 
+            Cats</h4>
+                    <p class="card-text">Lorem 
+            ipsum dolor sit amet 
+            consectetur adipisicing 
+            elit. Amet explicabo ipsam, 
+            recusandae sunt fuga ad 
+            neque consectetur quae 
+            blanditiis?</p>
+                </div>
+            </div>
+            <br>
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">My 
+            Cats</h4>
+                    <p class="card-text">Lorem 
+            ipsum dolor sit amet 
+            consectetur adipisicing 
+            elit. Amet explicabo ipsam, 
+            recusandae sunt fuga ad 
+            neque consectetur quae 
+            blanditiis?</p>
+                </div>
+            </div>
+        </div>
+        <br>
+        <h3 class="text-danger">Card With Cols</h3>
+        <div class="row">
+            <div class="col-3">
+
+                <div class="card">
+                    <img class="card-img-top" src="image/cat-2.png" alt="My-Cat-2" style="width: 100%;">
+                    <div class="card-body">
+                        <h4 class="card-title">Card</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ab officiis sunt sapiente nisi beatae.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img src="image/IMG9.png" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">My TV</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere provident repellat est sequi, officiis nesciunt error ullam doloremque qui? Culpa.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img src="image/IMG9.png" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">My TV</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere 
+                            provident repellat est sequi, officiis nesciunt error ullam doloremque qui? Culpa.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card">
+                    <img src="image/IMG9.png" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">My TV</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere 
+                            provident repellat est sequi, officiis nesciunt error ullam doloremque qui? Culpa.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br><br><br>
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
